app/assets/stylesheets/items.scss
$bg-color: rgba(255,255,255,0.9);
$bg-color-red: rgba(255,200,200,0.5);

body.item {

	@media all, handheld, (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {

		background: none;
		font-family: 'Cinzel', serif;
		text-align: center;

		.topnav {
			font-size: 16px;
			line-height: 20px;
			text-align: center;

			a {
				color: red;
			};

			a:hover {
				color: red;
			};

			a:visited {
				color: red;
			};

		};

		a {
				color: red;
			};

		a:hover {
			color: red;
		};

		a:visited {
			color: red;
		};

		h1.headline {
			margin-top: 30px;
			line-height: 50px;
			font-size: 48px;
			font-size: 7vw;
			letter-spacing: 0.2em;
		};

		h2 {
			font-size: 36px;
			font-size: 6vw;
		}

		h4 {
			font-size: 20px;
			font-size: 4vw;
		}

		hr {
			border: solid black 1px;
		};

		.key {
			color: red;
			padding: 0 2px 0 2px;
			margin-right: 5px;
			border: solid red 1px;
		};

		.preview {
			width: 90%;
			margin-top: 40px;
			margin-left: auto;
			margin-right: auto;
			padding: 10px;

			h4 {
				font-size: 14px;
			};

		};

		.thumb {
			width: 90%;

			img {
				display: block;
    		max-width: 100%;
    		max-height: 400px;
    		width: auto;
    		height: auto;
				border: solid black 1px;
			};

		};

		.no-image {
			width: 90%;
			height: 400px;
			line-height: 400px;
			display: block;
			float: left;
			font-size: 24px;
			text-align: center;
			margin-right: 40px;
			background-color: rgba(200,200,200,1);
		};

		.blurb {
			float: left;
			width: 90%;
			text-align: left;
			margin-bottom: 20px;
			border-bottom: solid black 1px;

			a {
				color: red;
			}

			a:hover {
				color: red;
			};

			a:visited {
				color: red;
			};

			p {
				font-size: 18px;
				font-family: 'Arapey', serif;
			};

			.cat {
				color: black;
				padding: 0 2px 0 2px;
				margin-right: 5px;
				border: solid black 1px;
			};

			.key {
				color: red;
				padding: 0 2px 0 2px;
				margin-right: 5px;
				border: solid red 1px;
			};

		};

		.item-form {
			width: 90%;
			margin-top: 20px;
			margin-left: auto;
			margin-right: auto;
			margin-bottom: 20px;
			text-align: left;	
			border: solid black 1px;
			background-color: $bg-color-red;
			padding: 10px;

			label {
				width: 100%;
				text-align: left;
				font-size: 14px;
				font-size: 3vw;
				color: red;
				margin-bottom: 10px;
				margin-right: 5px;	
			};

			label.short {
				width: 30%;	
			};

			label.very_short {
				width: 5%;
				text-align: left;
			};	

			input[type=text] {
				width: 100%;
				margin-bottom: 10px;
				font-family: 'Courier';
			};

			textarea {
				width: 100%;
				height: 100px;
				multiline: true;
				margin-bottom: 10px;
				font-family: 'Courier';
			};

			input[type=text].short {
				width: 50%;
				margin-bottom: 10px;
				font-family: 'Courier';
			};

			input[type=date] {
				width: 50%;
				height: 25px;
				margin-bottom: 10px;
				font-family: 'Courier';
			};

			input[type=radio] {
				width: 20px;
				line-height: 10px;
				margin-bottom: 10px;
			};

			/*#submit {
				width: 100%;
				height: 40px;
				margin-top: 5px;
				padding: 0;
				text-align: center;
			};*/

			/*input[type=submit] {
				margin-top: 5px;
				text-align: center;
				width: 75px;
			};

			input[type=submit].delete {
				width: 120px;
				float: right;
				color: red;
				margin-top: -34px;
				margin-right: 20px;
			};*/

			.submit {
				margin-top: 15px;
				margin-bottom: 10px;
				text-align: center;
			};	

			.delete {
				color: red;
			};

		};

		.cat-key-list {
			width: 70%;
			float: center;
			margin-left: auto;
			margin-right: auto;
			text-align: left;

			input[type=checkbox] {
				margin-top: 5px;
			}
		}

		.item-cats-keys {
			width: 90%;
			margin-left: auto;
			margin-right: auto;
			margin-bottom: 20px;
			background-color: $bg-color-red;
			border: solid black 1px;
			padding-bottom: 10px;

			h5 {
				color: red;
				letter-spacing: 0.1em;
			}

		};

		#item-keys {
			width: 20%;
			height: 500px;
			float: left;
			margin-top: 20px;
			margin-left: 20px;
			border: solid black 1px;
		}

		#item-description {
			width: 55%;
			height: 250px;
			float: left;
			margin-top: 20px;
			margin-left: 5%;
			padding: 10px;
			border: solid black 1px;
			overflow: scroll;

			h4 {
				color: red;
				letter-spacing: 0.2em;
				text-align: center;
			};

			p {
				font-family: 'Arapey', serif;
				font-size: 18px;
				text-align: left;
			};
			
		};

		#item-details {
			width: 30%;
			height: 250px;
			float: right;
			margin-top: 20px;
			margin-right: 5%;
			padding: 10px;
			text-align: left;
			border: solid black 1px;
			overflow: scroll;

			h4 {
				color: red;
				letter-spacing: 0.1em;
				text-align: left;
			};

		};

		#item-thumbs-container {
			width: 90%;
			height: 500px;
			display: inline-block;
			float: center;
			margin-top: 20px;
			margin-left: auto;
			margin-right: auto;
			border: solid black 1px;
			overflow: scroll;

			h4 {
				color: red;
				letter-spacing: 0.2em;
				text-align: center;
			};

		};

		#item-thumbs {
			width: 10000px;
			height: 450px;
			margin-top: 0;
			text-align: left;
		};

		#carousel-override {
			color: rgba(255,100,100,1);
			background-color: rgba(255,255,255,0);
			background-image: none;
			opacity: 1;
		};

		#carousel-override:hover {
			color: rgba(255,0,0,1);
			background-color: rgba(255,255,255,0);
			background-image: none;
			opacity: 1;
		};

	};

	/*=======================================================================*/

	@media (min-width: 1000px) {

		h1.headline {
			font-size: 48px;
		};

		h2 {
			font-size: 36px;
		};

		h4 {
			font-size: 20px;
		};

		.preview {
			width: 80%;
			height: 420px;
			border-bottom: 20px;
			border-bottom: solid black 1px;

			h4 {
				font-size: 20px;
			};

		};

		.thumb {
			width: 40%;
			margin-right: 40px;
			float: left;
			
			img {	
				display: block;
				width: 450px;
				height: 400px;		
			};

		};

		.no-image {
			width: 40%;
		};

		.blurb {
			width: 50%;
			margin-bottom: 0;
			border-bottom: none;
		};

		.item-form {
			width: 40%;

			label {
				width: 25%;
				font-size: 14px;
				text-align: right;
			};

			label.large {
				float: left;
				height: 100px;
			};

			input[type=text] {
				width: 73%;
			};

			input[type=text].short {
				width: 30%;
			};

			input[type=date] {
				width: 30%;
			};

			textarea {
				width: 73%;
			};

		};

		.edit-item-form {
			float: left;
			margin-left: 100px;
			margin-right: 0;
		};

		.item-cats-keys {
			width: 20%;
			margin-top: 20px;
			margin-left: 20px;
			float: left;
		};

	};

};

